--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -5,6 +5,7 @@ import Header from "@components/layout/Header.astro";
 import Footer from "@components/layout/Footer.astro";
 import Drawer from "@components/layout/Drawer.astro";
 import SpeedInsights from "@vercel/speed-insights/astro";
+import Analytics from "@vercel/analytics/astro";
 const { title, description } = Astro.props;
 import { SITE } from "@consts";
 ---
@@ -22,5 +23,6 @@ import { SITE } from "@consts";
     </main>
     <Footer />
     <SpeedInsights />
+    <Analytics />
   </body>
 </html>
